# plugin-store

./: CLAUDE.md  Cargo.toml  README.md  install-local.sh  registry.json
.claude-plugin/: marketplace.json
.github/scripts/: inject-preflight.py
.github/workflows/: plugin-ai-review.yml  plugin-build.yml  plugin-lint.yml  plugin-publish.yml  plugin-summary.yml
docs/: FOR-DEVELOPERS-ZH.md  FOR-DEVELOPERS.md
official/hyperliquid/: Cargo.toml
official/hyperliquid/skills/hyperliquid/: SKILL.md
official/hyperliquid/skills/hyperliquid/references/: command-reference.md
official/hyperliquid/src/: auth.rs  client.rs  main.rs
scripts/: update-checker.py
skills/aave-v3/: SKILL.md  SUMMARY.md  plugin.yaml
skills/aave-v3-plugin/: Cargo.toml  SKILL.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
skills/clanker/: Cargo.toml  SKILL.md  plugin.yaml
skills/clanker-plugin/: SKILL.md
skills/compound-v3/: Cargo.toml  SKILL.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
skills/compound-v3-plugin/: SKILL.md  SKILL_SUMMARY.md  SUMMARY.md
skills/curve/: Cargo.toml  SKILL.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
skills/curve-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/etherfi/: Cargo.toml  SKILL.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
skills/etherfi-plugin/: Cargo.toml  SKILL.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
skills/gmx-v2-plugin/: SKILL.md
skills/hyperliquid/: Cargo.toml  SKILL.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
skills/hyperliquid-plugin/: Cargo.toml  SKILL.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
skills/kamino-lend-plugin/: SKILL.md
skills/kamino-liquidity/: SKILL.md
skills/kamino-liquidity-plugin/: SKILL.md  SKILL_SUMMARY.md  SUMMARY.md
skills/lido/: Cargo.toml  SKILL.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
skills/lido-plugin/: SKILL.md  SKILL_SUMMARY.md  SUMMARY.md
skills/macro-intelligence/: .gitignore  README.md  SKILL.md  SKILL_SUMMARY.md  (+5 more)
skills/meteora/: Cargo.toml  SKILL.md  plugin.yaml
skills/meteora/.claude-plugin/: plugin.json
skills/meteora/src/: meteora_ix.rs  solana_rpc.rs
skills/meteora/src/commands/: add_liquidity.rs  get_user_positions.rs  remove_liquidity.rs
src/: config.rs
(+453 files in other folders)
