[package]
name = "plugin-store"
version = "0.2.1"
edition = "2021"
description = "A plugin marketplace CLI for Skills and MCP servers"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
indicatif = "0.17"
dirs = "6"
sha2 = "0.10"
colored = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
ratatui = "0.29"
crossterm = "0.28"
serde_yaml = "0.9"
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
